[tool.poetry]
name = "currency browser"
version = "0.1.0"
description = ""
authors = ["Blazej Bielski <bbielski@lyck.pl>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
black = "23.3.0"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-django = "4.5.2"
pytest-cov = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | blib2to3
  | tests/data
  | profiling
)/
'''
